test/error/LexLiteralDecTrailingLetters.fu
public static class Test
{
	public static bool Run()
	{
		0 .. 0foo; //ERROR: Invalid integer
		return true;
	}
}
